--- a/UI/SearchMovie.UI/SearchMovie.UI.csproj
+++ b/UI/SearchMovie.UI/SearchMovie.UI.csproj
@@ -76,7 +76,16 @@
     </ApplicationDefinition>
     <Compile Include="Startup\Bootstrapper.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\MovieShortItemViewModel.cs" />
     <Compile Include="ViewModel\Observable.cs" />
+    <Compile Include="ViewModel\SearchInputViewModel.cs" />
+    <Compile Include="ViewModel\SearchResultViewModel.cs" />
+    <Compile Include="View\SearchInputView.xaml.cs">
+      <DependentUpon>SearchInputView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\SearchResultView.xaml.cs">
+      <DependentUpon>SearchResultView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Wrapper\ModelWrapper.cs" />
     <Compile Include="Wrapper\MovieShortWrapper.cs" />
     <Page Include="View\MainWindow.xaml">
@@ -91,6 +100,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\SearchInputView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\SearchResultView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
