--- a/Common/Core/Core.csproj
+++ b/Common/Core/Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A840BB11-F35C-4322-BAAB-50121E9E1820}</ProjectGuid>
+    <ProjectGuid>{ECC5B2BA-6627-4B92-94D1-73358EBC91EA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SearchMovie.Service</RootNamespace>
-    <AssemblyName>SearchMovie.Service</AssemblyName>
+    <RootNamespace>Core</RootNamespace>
+    <AssemblyName>Core</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,12 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="RestSharp, Version=106.3.1.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\RestSharp.106.3.1\lib\net452\RestSharp.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,31 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ModelBuilder\MovieModelBuilder.cs" />
-    <Compile Include="ModelBuilder\SearchResultModelBuilder.cs" />
+    <Compile Include="Option.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Provider\GatewaySettingsProvider.cs" />
-    <Compile Include="Provider\MovieProvider.cs" />
-    <Compile Include="Provider\SearchProvider.cs" />
-    <Compile Include="RequestBuilder\MovieRequestBuilder.cs" />
-    <Compile Include="RequestBuilder\SearchRequestBuilder.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Common\Core\Core.csproj">
-      <Project>{ecc5b2ba-6627-4b92-94d1-73358ebc91ea}</Project>
-      <Name>Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Model\SearchMovie.Model\SearchMovie.Model.csproj">
-      <Project>{4A4B34CC-610A-4C4B-8BD7-CC40A3A8874C}</Project>
-      <Name>SearchMovie.Model</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SearchMovie.IService\SearchMovie.IService.csproj">
-      <Project>{70DBF9B9-9220-4CA6-B4FD-EE06D8657C42}</Project>
-      <Name>SearchMovie.IService</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
