--- a/UI/SearchMovie.UI/SearchMovie.UI.csproj
+++ b/UI/SearchMovie.UI/SearchMovie.UI.csproj
@@ -139,6 +139,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\Core\Core.csproj">
+      <Project>{ecc5b2ba-6627-4b92-94d1-73358ebc91ea}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Model\SearchMovie.Model\SearchMovie.Model.csproj">
       <Project>{4A4B34CC-610A-4C4B-8BD7-CC40A3A8874C}</Project>
       <Name>SearchMovie.Model</Name>
