--- a/UI/SearchMovie.UI/SearchMovie.UI.csproj
+++ b/UI/SearchMovie.UI/SearchMovie.UI.csproj
@@ -88,6 +88,7 @@
     </Compile>
     <Compile Include="Wrapper\ModelWrapper.cs" />
     <Compile Include="Wrapper\MovieShortWrapper.cs" />
+    <Compile Include="Wrapper\MovieWrapper.cs" />
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
